test/data/codegen/valid/one_col_many/queries.cypher
// name: AllPersonNames :many
MATCH (p:Person) RETURN p.name
