test/data/codegen/invalid/alias_required_expression/queries.cypher
// name: PeopleAgePlusOne :many
MATCH (p:Person) RETURN p.age + 1
